# STUFF

./: README.md
STUFF/: CMakeLists.txt
STUFF/Library_GPU/: CMakeLists.txt
STUFF/Library_GPU/cu/: kernels.cu  kernels.h
STUFF/Library_GPU/src/: Library_GPU.cpp
STUFF/method/: CMakeLists.txt
STUFF/method/src/: main.cpp
